constants and cleaning

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <div id="root">
       I'm loading...!
     </div>
-    <script src="index.js"></script>
+    <!-- type="module" important to use import/export -->
+    <script src="index.js" type="module"></script>
   </body>
 </html>
